; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/tools/lib/extr_carlfw.c_carlfw_entry_unlink.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/tools/lib/extr_carlfw.c_carlfw_entry_unlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.carlfw = type { i32, i32 }
%struct.carlfw_list_entry = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.carlfw*, %struct.carlfw_list_entry*)* @carlfw_entry_unlink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @carlfw_entry_unlink(%struct.carlfw* %0, %struct.carlfw_list_entry* %1) #0 {
  %3 = alloca %struct.carlfw*, align 8
  %4 = alloca %struct.carlfw_list_entry*, align 8
  store %struct.carlfw* %0, %struct.carlfw** %3, align 8
  store %struct.carlfw_list_entry* %1, %struct.carlfw_list_entry** %4, align 8
  %5 = load %struct.carlfw*, %struct.carlfw** %3, align 8
  %6 = getelementptr inbounds %struct.carlfw, %struct.carlfw* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = add nsw i32 %7, -1
  store i32 %8, i32* %6, align 4
  %9 = load %struct.carlfw_list_entry*, %struct.carlfw_list_entry** %4, align 8
  %10 = getelementptr inbounds %struct.carlfw_list_entry, %struct.carlfw_list_entry* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @le16_to_cpu(i32 %12)
  %14 = load %struct.carlfw*, %struct.carlfw** %3, align 8
  %15 = getelementptr inbounds %struct.carlfw, %struct.carlfw* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = sext i32 %16 to i64
  %18 = sub nsw i64 %17, %13
  %19 = trunc i64 %18 to i32
  store i32 %19, i32* %15, align 4
  %20 = load %struct.carlfw_list_entry*, %struct.carlfw_list_entry** %4, align 8
  %21 = getelementptr inbounds %struct.carlfw_list_entry, %struct.carlfw_list_entry* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = call i32 @list_del(i32* %22)
  ret void
}

declare dso_local i64 @le16_to_cpu(i32) #1

declare dso_local i32 @list_del(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
